--- a/index.html
+++ b/index.html
@@ -103,5 +103,8 @@ document.addEventListener("DOMContentLoaded", () => {
   }
 });
 
-</script>
+ </main>
+  <script src="ZEE.js"></script>
+</body>
+
 </html>
