--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 
  </main>
-  <script src="ZEE.js"></script>
+  <script src="ZEE5.js"></script>
 </body>
 
 </html>
